--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,18 +9,18 @@
 
 <link rel="alternate" type="application/rss&#43;xml" href="/docs/index.xml">
 
-<link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico" >
-<link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/favicon-16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-36x36.png" sizes="36x36">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-48x48.png" sizes="48x48">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-72x72.png" sizes="72x72">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-96x196.png" sizes="96x196">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-144x144.png" sizes="144x144">
-<link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/favicons/android-192x192.png"sizes="192x192">
+<link rel="shortcut icon" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/favicon.ico" >
+<link rel="apple-touch-icon" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/apple-touch-icon-180x180.png" sizes="180x180">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-36x36.png" sizes="36x36">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-48x48.png" sizes="48x48">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-72x72.png" sizes="72x72">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-96x196.png" sizes="96x196">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-144x144.png" sizes="144x144">
+<link rel="icon" type="image/png" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/favicons/android-192x192.png"sizes="192x192">
 
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 <meta property="og:type" content="website" />
@@ -34,10 +34,10 @@
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"/>
 <meta name="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}"/>
 
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/palette.css">
+<link rel="stylesheet" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/css/main.css">
+<link rel="stylesheet" href="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/css/palette.css">
 <script
-  src="{{ site.baseurl }}/assets/js/jquery-3.3.1/jquery-3.3.1.min.js"
+  src="https://assets.service.tonbridgespiritualist.com/frontend/tsc-docsy/assets/js/jquery-3.3.1/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 </head>
